[package]
name = "dnsanalytics"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
hickory-proto = "0.25.2"
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
redis = { version = "1.0.2", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }
deadpool-redis = "0.22.1"
ftlog = "0.2"
serde = "1.0.228"
